--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
   <header id="header"></header>
 
-  <main></main>
+  <main>
+    <div class="main_lunch"></div>
+    <div class="main_drink"></div>
+    <div class="main_app"></div>
+    <div class="main_dessert"></div>
+  </main>
 
   <footer></footer>
 
