--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <header id="header"></header>
 
   <main>
-    <div class="main_lunch"></div>
-    <div class="main_drink"></div>
-    <div class="main_app"></div>
-    <div class="main_dessert"></div>
+  
   </main>
+  <!-- <aside>
+    <p>THIS is the aside!!!!!!!!!!!!!</p>
+  </aside> -->
 
   <footer></footer>
 
