All ordes button

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <main>
   
   </main>
-  <!-- <aside>
-    <p>THIS is the aside!!!!!!!!!!!!!</p>
-  </aside> -->
+  <aside>
+  </aside>
 
   <footer></footer>
 
